--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,15 @@
               "src/assets"
             ],
             "styles": [
+              "src/../node_modules/bootswatch/dist/simplex/bootstrap.css",
+              "src/../node_modules/font-awesome/css/font-awesome.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "src/../node_modules/jquery/dist/jquery.js",
+              "src/../node_modules/popper.js/dist/umd/popper.js",
+              "src/../node_modules/bootstrap/dist/js/bootstrap.js"
+            ]
           },
           "configurations": {
             "production": {
